<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyUniversitas</string>
    <string name="univ_tentang">Tentang</string>
    <string name="univ_moto">Moto</string>
    <string name="univ_jenis">Jenis</string>
    <string name="univ_didirikan">Didirikan</string>
    <string name="univ_rektor">Rektor</string>
    <string name="univ_staff">Staf Akademik</string>
    <string name="univ_mahasiswa">Jumlah Mahasiswa</string>
    <string name="univ_sarjana">Sarjana</string>
    <string name="univ_magister">Magister</string>
    <string name="univ_doktor">Doktor</string>
    <string name="univ_lokasi">Lokasi</string>
    <string name="univ_kampus">Kampus</string>
    <string name="univ_warna">Warna</string>
    <string name="univ_julukan">Julukan</string>
    <string name="univ_ugm_nama">Universitas Gadjah Mada</string>
    <string name="univ_ugm_akreditasi">Terakreditasi A</string>
    <string name="univ_ugm_detail">Universitas Gadjah Mada (disingkat UGM) merupakan universitas negeri di Indonesia yang didirikan oleh Pemerintah Republik Indonesia pada tanggal 19 Desember 1949 berdasarkan Peraturan Pemerintah Nomor 23 Tahun 1949 tentang Peraturan Tentang Penggabungan Perguruan Tinggi Menjadi Universiteit tanggal 16 Desember 1949. Kampus UGM yang terletak di Yogyakarta merupakan universitas pertama yang didirikan oleh Pemerintah Republik Indonesia setelah Indonesia merdeka.</string>
    <string name="univ_ugm_moto">Mengakar Kuat, Menjulang Tinggi</string>
    <string name="univ_ugm_jenis">Perguruan Tinggi Negeri Badan Hukum</string>
    <string name="univ_ugm_didirikan">19 Desember 1949</string>
    <string name="univ_ugm_rektor">Prof. Ir. Panut Mulyono, M.Eng., D.Eng.\n(sejak 26 Mei 2017)</string>
    <string name="univ_ugm_staff">4.468 (2018)</string>
    <string name="univ_ugm_mahasiswa">47.081 (2018)</string>
    <string name="univ_ugm_sarjana">37611 (2017)</string>
    <string name="univ_ugm_magister">7854 (2017)</string>
    <string name="univ_ugm_doktor">871 (2017)</string>
    <string name="univ_ugm_lokasi">Sleman, Yogyakarta, Indonesia</string>
    <string name="univ_ugm_kampus">Urban, 882 meter persegi (357 hektar)</string>
    <string name="univ_ugm_warna">Khaki muda</string>
    <string name="univ_ugm_julukan">UGM</string>
    <string name="univ_ui_nama">Universitas Indonesia</string>
    <string name="univ_ui_akreditasi">Terakreditasi A</string>
    <string name="univ_ui_detail">Universitas Indonesia disingkat sebagai UI, adalah sebuah perguruan tinggi di Indonesia. Kampus utamanya terletak di bagian Utara dari Depok, Jawa Barat tepat di perbatasan antara Depok dengan wilayah Jakarta Selatan, dan kampus utama lainnya terdapat di daerah Salemba di Jakarta Pusat. Universitas Indonesia adalah kampus modern, komprehensif, terbuka, multibudaya, dan humanis yang mencakup disiplin ilmu yang luas. Telah menghasilkan lebih dari 400.000 alumni.</string>
    <string name="univ_ui_moto">Kebenaran, Kejujuran, Keadilan</string>
    <string name="univ_ui_jenis">Perguruan Tinggi Negeri Badan Hukum</string>
    <string name="univ_ui_didirikan">1849 (sebagai Dokter-Djawa School Batavia) 1954-sekarang (sebagai Universitas Indonesia)</string>
    <string name="univ_ui_rektor">Prof. Dr. Ir. Muhammad Anis, M.Met.\n(sejak 4 Desember 2014)</string>
    <string name="univ_ui_staff">2.267 (2018)</string>
    <string name="univ_ui_mahasiswa">46.771 (2018)</string>
    <string name="univ_ui_sarjana">28.095 (2015)</string>
    <string name="univ_ui_magister">13.609 (2015)</string>
    <string name="univ_ui_doktor">2.315 (2015)</string>
    <string name="univ_ui_lokasi">Depok, Jawa Barat, Indonesia</string>
    <string name="univ_ui_kampus">Urban, 3.000.000 ~ 3.200.000 meter persegi</string>
    <string name="univ_ui_warna">Kuning</string>
    <string name="univ_ui_julukan">UI</string>
    <string name="univ_itb_nama">Institut Teknologi Bandung</string>
    <string name="univ_itb_akreditasi">Terakreditasi A</string>
    <string name="univ_itb_detail">Institut Teknologi Bandung (ITB) adalah sebuah perguruan tinggi negeri yang berkedudukan di Kota Bandung. Nama ITB diresmikan pada tanggal 2 Maret 1959. Sejak tanggal 14 Oktober 2013 ITB menjadi Perguruan Tinggi Negeri Badan Hukum (PTN BH) yang memiliki otonomi pengelolaan dalam akademik dan nonakademik. ITB telah memiliki 27 program studi yang terakreditasi secara internasional (sebelas dari ABET, sebelas dari ASIIN).</string>
    <string name="univ_itb_moto">Kemajuan dalam keselarasan</string>
    <string name="univ_itb_jenis">Perguruan Tinggi Negeri Badan Hukum</string>
    <string name="univ_itb_didirikan">3 Juli 1920 sebagai TH te Bandoeng\n2 Maret 1959 diresmikan sebagai ITB</string>
    <string name="univ_itb_rektor">Prof. Dr. Ir. Kadarsah Suryadi, DEA\nuntuk masa jabatan 2015–2020.</string>
    <string name="univ_itb_staff">1.207 (2014)</string>
    <string name="univ_itb_mahasiswa">19.747 (2014)</string>
    <string name="univ_itb_sarjana">14.320</string>
    <string name="univ_itb_magister">4.776</string>
    <string name="univ_itb_doktor">651</string>
    <string name="univ_itb_lokasi">Bandung, Kota Bandung, Jawa Barat</string>
    <string name="univ_itb_kampus">Urban, 795.646 meter persegi</string>
    <string name="univ_itb_warna">Deep Cobalt Blue</string>
    <string name="univ_itb_julukan">ITB</string>
    <string name="univ_ipb_nama">Institut Pertanian Bogor</string>
    <string name="univ_ipb_akreditasi">Terakreditasi A</string>
    <string name="univ_ipb_detail">Institut Pertanian Bogor (nama bahasa Inggris: IPB University, sebelumnya Bogor Agricultural University) adalah sebuah perguruan tinggi pertanian negeri yang berkedudukan di Bogor. Sebelum diresmikan pada tahun 1963, IPB adalah sebuah fakultas pertanian pada Universitas Indonesia. Pada tanggal 1 September 1963. Presiden Pertama Indonesia, Ir. Soekarno, melakukan peletakkan batu pertama pembangunan kampus sekaligus menandai peresmian Institut Pertanian Bogor sebagai sebuah perguruan tinggi mandiri.</string>
    <string name="univ_ipb_moto">Inspiring Innovation with Integrity</string>
    <string name="univ_ipb_jenis">Perguruan Tinggi Negeri Badan Hukum</string>
    <string name="univ_ipb_didirikan">1963</string>
    <string name="univ_ipb_rektor">Dr. Arif Satria, SP, M.Si.</string>
    <string name="univ_ipb_staff">Tidak diketahui</string>
    <string name="univ_ipb_mahasiswa">Tidak diketahui</string>
    <string name="univ_ipb_sarjana">Tidak diketahui</string>
    <string name="univ_ipb_magister">Tidak diketahui</string>
    <string name="univ_ipb_doktor">Tidak diketahui</string>
    <string name="univ_ipb_lokasi">Bogor</string>
    <string name="univ_ipb_kampus">IPB Darmaga\nIPB Baranangsiang Bogor\nIPB Gunung Gede Bogor\nIPB Cilibende Bogor\nIPB Taman Kencana Bogor</string>
    <string name="univ_ipb_warna">Biru</string>
    <string name="univ_ipb_julukan">IPB</string>
    <string name="univ_undip_nama">Universitas Diponegoro</string>
    <string name="univ_undip_akreditasi">Terakreditasi A</string>
    <string name="univ_undip_detail">Universitas Diponegoro disingkat Undip, adalah sebuah Perguruan Tinggi Negeri di Indonesia yang berlokasi di Semarang, Jawa Tengah, Indonesia. Undip didirikan pada tahun 1956 sebagai Perguruan Tinggi Swasta dan baru mendapat status sebagai Perguruan Tinggi Negeri pada tahun 1961. Kata Diponegoro diambil dari nama pahlawan nasional, yaitu Pangeran Diponegoro yang merupakan seorang pangeran pengobar semangat kemerdekaan dari tindakan kolonialisme Belanda di awal abad ke-18. Semangat ini turut menginspirasi pendirian Undip. Universitas Diponegoro memperoleh akreditasi A (Sangat Baik) dengan skor 361 dari Badan Akreditasi Nasional Perguruan Tinggi yang berlaku sejak 2013–2018. Berdasarkan Peraturan Pemerintah Nomor 52 Tahun 2015, Undip ditetapkan statusnya menjadi Perguruan Tinggi Negeri Badan Hukum.</string>
    <string name="univ_undip_moto">Wiyata Hangreksa Gapuraning Nagara</string>
    <string name="univ_undip_jenis">Perguruan Tinggi Negeri Badan Hukum</string>
    <string name="univ_undip_didirikan">9 Januari 1957</string>
    <string name="univ_undip_rektor">Prof. Dr. Yos Johan Utama, S.H., M.Hum.</string>
    <string name="univ_undip_staff">Tidak diketahui</string>
    <string name="univ_undip_mahasiswa">Tidak diketahui</string>
    <string name="univ_undip_sarjana">Tidak diketahui</string>
    <string name="univ_undip_magister">Tidak diketahui</string>
    <string name="univ_undip_doktor">Tidak diketahui</string>
    <string name="univ_undip_lokasi">Kota Semarang, dan Jepara</string>
    <string name="univ_undip_kampus">Semarang</string>
    <string name="univ_undip_warna">Biru laut</string>
    <string name="univ_undip_julukan">UNDIP</string>
    <string name="univ_ub_nama">Universitas Brawijaya</string>
    <string name="univ_ub_akreditasi">Terakreditasi A</string>
    <string name="univ_ub_detail">Universitas Brawijaya (UB) adalah perguruan tinggi di Indonesia yang berdiri pada tahun 1963 di Kota Malang, Jawa Timur melalui Ketetapan Menteri Pendidikan dan Ilmu Pengetahuan no.1 tanggal 5 Januari 1963. Tanggal tersebut kemudian ditetapkan sebagai Dies Natalis UB. Nama Brawijaya diberikan khusus oleh Presiden Soekarno dengan harapan mampu gemilang seperti Raden Wijaya (Brawijaya I) selaku pendiri Kerajaan Majapahit sekaligus menjadi kampus kebanggan bangsa Indonesia.</string>
    <string name="univ_ub_moto">Building Up Noble Future</string>
    <string name="univ_ub_jenis">Perguruan Tinggi Negeri Badan Hukum</string>
    <string name="univ_ub_didirikan">5 Januari 1963</string>
    <string name="univ_ub_rektor">Prof. Dr. Ir. Nuhfil Hanani AR, M.S.</string>
    <string name="univ_ub_staff">Tidak diketahui</string>
    <string name="univ_ub_mahasiswa">55.469 (2018)</string>
    <string name="univ_ub_sarjana">Tidak diketahui</string>
    <string name="univ_ub_magister">Tidak diketahui</string>
    <string name="univ_ub_doktor">Tidak diketahui</string>
    <string name="univ_ub_lokasi">Malang, Jawa Timur, Indonesia</string>
    <string name="univ_ub_kampus">Urban; Kota Malang\n(I Ketawanggede,\nII Dieng,\nIII Kediri\nIV Jakarta)</string>
    <string name="univ_ub_warna">Biru dongker</string>
    <string name="univ_ub_julukan">UB</string>
    <string name="univ_its_nama">Institut Teknologi Sepuluh Nopember</string>
    <string name="univ_its_akreditasi">Terakreditasi A</string>
    <string name="univ_its_detail">Institut Teknologi Sepuluh Nopember (disingkat ITS) adalah perguruan tinggi negeri yang terletak di Surabaya. ITS awalnya didirikan oleh Yayasan Perguruan Tinggi Teknik (YPTT) yang diketuai oleh dr. Angka Nitisastro pada tanggal 10 November 1957.</string>
    <string name="univ_its_moto">ITS Cak! (Cerdas, Amanah, Kreatif)</string>
    <string name="univ_its_jenis">Perguruan Tinggi Negeri Badan Hukum</string>
    <string name="univ_its_didirikan">10 November 1957 sebagai Perguruan Tinggi Teknik 10 Nopember Surabaya</string>
    <string name="univ_its_rektor">Prof. Dr. Ir. Mochamad Ashari, M.Eng</string>
    <string name="univ_its_staff">Tidak diketahui</string>
    <string name="univ_its_mahasiswa">Tidak diketahui</string>
    <string name="univ_its_sarjana">15.151 (S-1), ditambah 2.312 (D-3), 58 (D-4)</string>
    <string name="univ_its_magister">2.020</string>
    <string name="univ_its_doktor">454</string>
    <string name="univ_its_lokasi">Surabaya</string>
    <string name="univ_its_kampus">Sukolilo, Manyar, dan Cokroaminoto</string>
    <string name="univ_its_warna">Biru</string>
    <string name="univ_its_julukan">ITS</string>
    <string name="univ_uns_nama">Universitas Sebelas Maret</string>
    <string name="univ_uns_akreditasi">Terakreditasi A</string>
    <string name="TODO">TODO</string>
</resources>