<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/itb"
                android:contentDescription="@string/TODO"/>

        </FrameLayout>

        <TextView
            style="@style/TextContent.Black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/univ_itb_nama"
            android:textSize="32sp" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="16dp"
            android:text="@string/univ_itb_akreditasi" />

        <TextView
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/univ_itb_detail"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/univ_tentang" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_moto" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_moto" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_jenis"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_jenis" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_didirikan" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_didirikan" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/univ_rektor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/itb_rektor" />

            <TextView
                style="@style/TextContent"
                android:layout_toEndOf="@+id/profile_image"
                android:text="@string/univ_itb_rektor"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_staff" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_staff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_mahasiswa"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_mahasiswa" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_sarjana" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_sarjana" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_magister" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_magister" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_doktor" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_doktor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_lokasi" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_lokasi" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_kampus" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_kampus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_warna" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_warna" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/univ_julukan" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/univ_itb_julukan" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>